Alignment corrections

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,9 +57,8 @@ section {
 }
 
 .img-box {
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   img {
-    margin: 0 50px;
     transition: all 200ms;
     &:hover {
       transform: scale(1.1);
@@ -101,7 +100,7 @@ section {
 
 .sponsor {
   img {
-    margin-top: 20px;
+    margin-top: 30px;
   }
 }
 
